<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:title="FORM"
        app:titleTextColor="@color/white"
        app:titleMarginStart="10dp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:autofillHints="@string/name"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_above="@id/Age"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Age"
        android:layout_above="@id/selGender"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/age"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/selGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_above="@id/gender"
        android:textColor="@color/black"
        android:layout_marginStart="100dp"/>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="180dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/Occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:text="@string/select_occupation"
        android:textColor="@color/black"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerOccupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Occupation"
        android:layout_marginStart="100dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="8dp"
        android:layout_below="@id/spinnerOccupation"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>