<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"
        android:layout_above="@id/Password"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_below="@id/Password"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>